# Askup

./: .gitignore  pyproject.toml  readme.md
askup/: cli.py  config.py
askup/providers/: openai_search.py
web_ai_cli/: cli.py
web_ai_cli/providers/: __init__.py  base.py
web_ai_cli/utils/: display.py
